add html elements

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 </head>
 
 <body>
+    <div id="card-container">
+        <h1>The hidden vault of motion secrets is opening soon...</h1>
+        <p>Be the one of the first few to step inside. Beware, it won't be open for long.</p>
+        <form>
+            <input type="email"  name="email" placeholder="Enter email">
+            <input type="submit">
+        </form>
+    </div>
 
 
     <!-- JavaScript Bundle with Popper -->
