--- a/index.html
+++ b/index.html
@@ -6,19 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motion Secrets</title>
 
-    <!-- CSS only -->
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Google Font Link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div id="card-container">
-        <h1>The hidden vault of motion secrets is opening soon...</h1>
-        <p>Be the one of the first few to step inside. Beware, it won't be open for long.</p>
-        <form>
-            <input type="email"  name="email" placeholder="Enter email">
-            <input type="submit">
-        </form>
-    </div>
+    <div class="card px-5 pb-5 pt-4" style="width: 424px;">
+        <div class="image-container">
+            <img src="/assets/WatchingEye.svg" class="card-img-top w-50" alt="watching eye">
+        </div>
+        <div class="card-body p-0">
+          <h1 class="card-title">The hidden vault of motion secrets is opening soon..</h1>
+          <p class="card-text">Be the one of the first few to step inside. Beware, it won't be open for long.</p>
+          <div class="email-input-group mb-0 fully-rounded-corners">
+            <input type="text" class="email-input-form fully-rounded-corners no-border" placeholder="Enter email" aria-label="Enter email" aria-describedby="button-addon2">
+            <button class="email-button fully-rounded-corners no-border" type="button" id="button-addon2">
+              <div class="button-text-container">
+                <span>
+                  Submit
+                </span>
+              </div>
+              <img src="/assets/arrow-up-right.svg" style="width: 16px;" alt="arrow up right">
+            </button>
+          </div>
+        </div>
+      </div>
+
+    <!-- <div class="grid-bg"></div> -->
+    <img class='grid-lines' id="mask" src="/assets/Grid Lines.svg">
+
 
 
     <!-- JavaScript Bundle with Popper -->
