fix asset reference tags

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 
     <!-- <div class="grid-bg"></div> -->
-    <img class='grid-lines' id="mask" src="/assets/Grid Lines.svg">
+    <img class='grid-lines' id="mask" src="/bootstrap-email-collector/assets/Grid Lines.svg">
 
 
 
